fix alignment of text to icon in feedback tool sidebar

--- a/app/src/components/FeedbackTool/feedbackTool.css
+++ b/app/src/components/FeedbackTool/feedbackTool.css
@@ -1,10 +1,5 @@
 section {
   display: flex;
   flex-direction: row;
-  /*justify-content: flex-end;*/
-  padding: 10px;
-}
-
-.editorContainer {
   padding: 10px;
 }
